--- a/index.html
+++ b/index.html
@@ -115,79 +115,140 @@
 
         var categories = {
             "transport": [
-                "traffic",
-                "type_transportation",
-                "type_train_station",
-                "mum_ws_polygon_grass",
-                "mum_ws_polygon_transport_taxi",
-                "mum_ws_polygon_transport_bus_station",
-                "mum_ws_polygon_transport_apron",
-                "mum_ws_polygon_transport_airport"
+                "traffic_58",
+                "type_transportation_57",
+                "type_train_station_56",
+                "mum_ws_polygon_grass_55",
+                "mum_ws_polygon_transport_taxi_54",
+                "mum_ws_polygon_transport_bus_station_53",
+                "mum_ws_polygon_transport_apron_52",
+                "mum_ws_polygon_transport_airport_51"
             ],
             "commercial": [
-                "mum_ws_polygon_buildings_retail",
-                "mum_ws_polygon_landmark_hotel",
-                "mum_ws_polygon_landmark_market_place",
-                "mum_ws_polygon_landmark_mall",
-                "mum_ws_polygon_landmark_cinema"
+                "mum_ws_polygon_buildings_retail_50",
+                "mum_ws_polygon_landmark_hotel_49",
+                "mum_ws_polygon_landmark_market_place_48",
+                "mum_ws_polygon_landmark_mall_47",
+                "mum_ws_polygon_landmark_cinema_46"
             ],
             "recreation": [
-                "mum_ws_polygon_landmark_theatre",
-                "mum_ws_polygon_landmark_arts_centre",
-                "mum_ws_polygon_landmark_community_centre",
-                "mum_ws_polygon_landmark_swimming_pool",
-                "mum_ws_polygon_landmark_pitch",
-                "mum_ws_polygon_landmark_playground",
-                "mum_ws_polygon_landmark_track",
-                "mum_ws_polygon_landmark_stadium",
-                "mum_ws_polygon_landmark_sports_centre"
+                "mum_ws_polygon_landmark_theatre_45",
+                "mum_ws_polygon_landmark_arts_centre_44",
+                "mum_ws_polygon_landmark_community_centre_43",
+                "mum_ws_polygon_landmark_swimming_pool_42",
+                "mum_ws_polygon_landmark_pitch_41",
+                "mum_ws_polygon_landmark_playground_40",
+                "mum_ws_polygon_landmark_track_39",
+                "mum_ws_polygon_landmark_stadium_38",
+                "mum_ws_polygon_landmark_sports_centre_37"
             ],
             "water": [
-                "mum_ws_polygon_water_wetland",
-                "mum_ws_polygon_water_water",
-                "mum_ws_polygon_water_riverbank",
-                "mum_ws_polygon_water_reservoir"
+                "mum_ws_polygon_water_wetland_36",
+                "mum_ws_polygon_water_water_35",
+                "mum_ws_polygon_water_riverbank_34",
+                "mum_ws_polygon_water_reservoir_33"
             ],
             "landuse": [
-                "mum_ws_polygon_landuse_orchard",
-                "mum_ws_polygon_landuse_meadow",
-                "mum_ws_polygon_landuse_recreation_ground",
-                "mum_ws_polygon_landuse_park",
-                "mum_ws_polygon_landuse_scrub",
-                "mum_ws_polygon_landuse_residential",
-                "mum_ws_polygon_landuse_forest",
-                "mum_ws_polygon_landuse_retail",
-                "mum_ws_polygon_landuse_commercial",
-                "mum_ws_polygon_landuse_cemetery",
-                "mum_ws_polygon_landuse_quarry",
-                "mum_ws_polygon_landuse_military",
-                "mum_ws_polygon_landuse_industrial",
-                "mum_ws_polygon_landuse_farmyard",
-                "mum_ws_polygon_landuse_heath",
-                "mum_ws_polygon_landuse_farmland",
-                "mum_ws_polygon_landuse_nature_reserve"
+                "mum_ws_polygon_landuse_orchard_32",
+                "mum_ws_polygon_landuse_meadow_31",
+                "mum_ws_polygon_landuse_recreation_ground_30",
+                "mum_ws_polygon_landuse_park_29",
+                "mum_ws_polygon_landuse_scrub_28",
+                "mum_ws_polygon_landuse_residential_27",
+                "mum_ws_polygon_landuse_forest_26",
+                "mum_ws_polygon_landuse_retail_25",
+                "mum_ws_polygon_landuse_commercial_24",
+                "mum_ws_polygon_landuse_cemetery_23",
+                "mum_ws_polygon_landuse_quarry_22",
+                "mum_ws_polygon_landuse_military_21",
+                "mum_ws_polygon_landuse_industrial_20",
+                "mum_ws_polygon_landuse_farmyard_19",
+                "mum_ws_polygon_landuse_heath_18",
+                "mum_ws_polygon_landuse_farmland_17",
+                "mum_ws_polygon_landuse_nature_reserve_16"
             ],
             "public_service": [
-                "mum_ws_polygon_landmark_courthouse",
-                "mum_ws_polygon_landmark_post_office",
-                "mum_ws_polygon_landmark_wastewater_plant",
-                "mum_ws_polygon_landmark_fire_station",
-                "mum_ws_polygon_landmark_police",
-                "mum_ws_polygon_buildings_hospital",
-                "mum_ws_polygon_landmark_hospital"
+                "mum_ws_polygon_landmark_courthouse_15",
+                "mum_ws_polygon_landmark_post_office_14",
+                "mum_ws_polygon_landmark_wastewater_plant_13",
+                "mum_ws_polygon_landmark_fire_station_12",
+                "mum_ws_polygon_landmark_police_11",
+                "mum_ws_polygon_buildings_hospital_10",
+                "mum_ws_polygon_landmark_hospital_9"
             ],
             "education": [
-                "mum_ws_polygon_landmark_library",
-                "mum_ws_polygon_buildings_college",
-                "mum_ws_polygon_landmark_college",
-                "mum_ws_polygon_buildings_school",
-                "mum_ws_polygon_landmark_school",
-                "mum_ws_polygon_buildings_university",
-                "mum_ws_polygon_landmark_university"
+                "mum_ws_polygon_landmark_library_8",
+                "mum_ws_polygon_buildings_college_7",
+                "mum_ws_polygon_landmark_college_6",
+                "mum_ws_polygon_buildings_school_5",
+                "mum_ws_polygon_landmark_school_4",
+                "mum_ws_polygon_buildings_university_3",
+                "mum_ws_polygon_landmark_university_2"
             ],
             "base": [
-                "natural",
-                "places"
+                "natural_1",
+                "places_0"
+            ],
+            "all_map": [
+                "traffic_58",
+                "type_transportation_57",
+                "type_train_station_56",
+                "mum_ws_polygon_grass_55",
+                "mum_ws_polygon_transport_taxi_54",
+                "mum_ws_polygon_transport_bus_station_53",
+                "mum_ws_polygon_transport_apron_52",
+                "mum_ws_polygon_transport_airport_51",
+                "mum_ws_polygon_buildings_retail_50",
+                "mum_ws_polygon_landmark_hotel_49",
+                "mum_ws_polygon_landmark_market_place_48",
+                "mum_ws_polygon_landmark_mall_47",
+                "mum_ws_polygon_landmark_cinema_46",
+                "mum_ws_polygon_landmark_theatre_45",
+                "mum_ws_polygon_landmark_arts_centre_44",
+                "mum_ws_polygon_landmark_community_centre_43",
+                "mum_ws_polygon_landmark_swimming_pool_42",
+                "mum_ws_polygon_landmark_pitch_41",
+                "mum_ws_polygon_landmark_playground_40",
+                "mum_ws_polygon_landmark_track_39",
+                "mum_ws_polygon_landmark_stadium_38",
+                "mum_ws_polygon_landmark_sports_centre_37",
+                "mum_ws_polygon_water_wetland_36",
+                "mum_ws_polygon_water_water_35",
+                "mum_ws_polygon_water_riverbank_34",
+                "mum_ws_polygon_water_reservoir_33",
+                "mum_ws_polygon_landuse_orchard_32",
+                "mum_ws_polygon_landuse_meadow_31",
+                "mum_ws_polygon_landuse_recreation_ground_30",
+                "mum_ws_polygon_landuse_park_29",
+                "mum_ws_polygon_landuse_scrub_28",
+                "mum_ws_polygon_landuse_residential_27",
+                "mum_ws_polygon_landuse_forest_26",
+                "mum_ws_polygon_landuse_retail_25",
+                "mum_ws_polygon_landuse_commercial_24",
+                "mum_ws_polygon_landuse_cemetery_23",
+                "mum_ws_polygon_landuse_quarry_22",
+                "mum_ws_polygon_landuse_military_21",
+                "mum_ws_polygon_landuse_industrial_20",
+                "mum_ws_polygon_landuse_farmyard_19",
+                "mum_ws_polygon_landuse_heath_18",
+                "mum_ws_polygon_landuse_farmland_17",
+                "mum_ws_polygon_landuse_nature_reserve_16",
+                "mum_ws_polygon_landmark_courthouse_15",
+                "mum_ws_polygon_landmark_post_office_14",
+                "mum_ws_polygon_landmark_wastewater_plant_13",
+                "mum_ws_polygon_landmark_fire_station_12",
+                "mum_ws_polygon_landmark_police_11",
+                "mum_ws_polygon_buildings_hospital_10",
+                "mum_ws_polygon_landmark_hospital_9",
+                "mum_ws_polygon_landmark_library_8",
+                "mum_ws_polygon_buildings_college_7",
+                "mum_ws_polygon_landmark_college_6",
+                "mum_ws_polygon_buildings_school_5",
+                "mum_ws_polygon_landmark_school_4",
+                "mum_ws_polygon_buildings_university_3",
+                "mum_ws_polygon_landmark_university_2",
+                "natural_1",
+                "places_0"
             ]
         };
 
