--- a/index.html
+++ b/index.html
@@ -19,11 +19,24 @@
             padding: 0;
             margin: 0;
         }
+        #download-panel {
+            position: absolute;
+            top: 10px;
+            left: 10px;
+            z-index: 1000;
+            background: white;
+            padding: 8px;
+            border-radius: 4px;
+            box-shadow: 0 0 10px rgba(0,0,0,0.2);
+            max-width: 300px;
+        }
         </style>
         <title></title>
     </head>
 
     <body>
+        <div id="map">
+        </div>
         <div id="download-panel">
             <select id="categorySelect"></select>
             <select id="formatSelect">
@@ -33,8 +46,6 @@
             <button id="downloadBtn">Download</button>
             <div id="downloadStatus" style="font-size:12px;margin-top:6px;">            
             </div>
-        </div>
-        <div id="map">
         </div>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/jszip/3.7.1/jszip.min.js"></script>
         <script src="https://unpkg.com/tokml/tokml.js"></script>
