--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             top: 10px;
             left: 50px;
             z-index: 1000;
-            background: white;
+            background: #ffc700;
             padding: 8px;
             border-radius: 4px;
             box-shadow: 0 0 10px rgba(0,0,0,0.2);
