--- a/index.html
+++ b/index.html
@@ -3888,66 +3888,60 @@
         map.addLayer(layer_traffic_58);
         // Function to create popup for roads
         function pop_sv_road_59(feature, layer) {
-            layer.on({
-                mouseout: function(e) {
-                    for (var i in e.target._eventParents) {
-                        if (typeof e.target._eventParents[i].resetStyle === 'function') {
-                            e.target._eventParents[i].resetStyle(e.target);
-                        }
-                    }
-                },
-                mouseover: highlightFeature,
-            });
-            
             var popupContent = '<table>\
                     <tr>\
                         <th scope="row">Name</th>\
-                        <td class="visible-with-data" id="name">' + (feature.properties['name'] !== null ? autolinker.link(String(feature.properties['name']).replace(/'/g, '\'').toLocaleString()) : '') + '</td>\
+                        <td class="visible-with-data" id="Name">' + (feature.properties['Name'] !== null ? autolinker.link(String(feature.properties['Name']).replace(/'/g, '\'').toLocaleString()) : '') + '</td>\
                     </tr>\
                 </table>';
-            
             var content = removeEmptyRowsFromPopupContent(popupContent, feature);
-            layer.on('popupopen', function(e) {
-                addClassToPopupIfMedia(content, e.popup);
-            });
-            layer.bindPopup(content, { maxHeight: 400 });
+			layer.on('popupopen', function(e) {
+				addClassToPopupIfMedia(content, e.popup);
+			});
+			layer.bindPopup(content, { maxHeight: 400 });
         }
 
-        // Style function for roads
         function style_sv_road_59_0() {
             return {
                 pane: 'pane_sv_road_59',
                 opacity: 1,
-                color: 'rgba(100, 100, 100, 1.0)',
+                color: 'rgba(0,0,0,1.0)',
                 dashArray: '',
                 lineCap: 'round',
                 lineJoin: 'round',
-                weight: 3.0,  // Thicker line for roads
-                fill: false,
+                weight: 8.0,
                 fillOpacity: 0,
                 interactive: true,
             }
         }
-
-        // Create a pane for roads
+        function style_sv_road_59_1() {
+            return {
+                pane: 'pane_sv_road_59',
+                opacity: 1,
+                color: 'rgba(255,96,17,1.0)',
+                dashArray: '',
+                lineCap: 'round',
+                lineJoin: 'round',
+                weight: 6.0,
+                fillOpacity: 0,
+                interactive: true,
+            }
+        }
         map.createPane('pane_sv_road_59');
-        map.getPane('pane_sv_road_59').style.zIndex = 459;  // Higher than existing layers
+        map.getPane('pane_sv_road_59').style.zIndex = 400;
         map.getPane('pane_sv_road_59').style['mix-blend-mode'] = 'normal';
-
-        // Create the road layer
-        var layer_sv_road_59 = new L.geoJson(json_sv_road_59, {
+        var layer_sv_road_59 = new L.geoJson.multiStyle(json_sv_road_59_0, {
             attribution: '',
             interactive: true,
             dataVar: 'json_sv_road_59',
             layerName: 'layer_sv_road_59',
             pane: 'pane_sv_road_59',
             onEachFeature: pop_sv_road_59,
-            style: style_sv_road_59_0,
+            styles: [style_sv_road_59_0,style_sv_road_59_1,]
         });
-
-        // Add to bounds group and map
         bounds_group.addLayer(layer_sv_road_59);
         map.addLayer(layer_sv_road_59);
+        setBounds();
         var overlaysTree = [
         {label: '<b>transport</b>', collapsed: true, selectAllCheckbox: true, children: [
             {label: '<img src="legend/sv_road_59.png" /> sv_road', layer: layer_sv_road_59},
